Fixed app demo logic and layout bug

--- a/MortgageCalculatorMVC/wwwroot/css/site.css
+++ b/MortgageCalculatorMVC/wwwroot/css/site.css
@@ -105,7 +105,7 @@ body {
     text-align: center;
 }
 
-#tableheader {
+#tableHeader {
     background-color: #2B404F;
 }
 
